--- a/Autoservice156MAUI/appsettings.json
+++ b/Autoservice156MAUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ApiSettings": {
-    "BaseUrl": "http://localhost:7100",
+    "BaseUrl": "http://localhost:5136",
     "TimeoutSeconds": 30,
     "RetryCount": 3
   },
@@ -8,4 +8,7 @@
     "TokenStorageKey": "autoservice_auth_token",
     "UserStorageKey": "autoservice_user_data"
   }
+    "ConnectionStrings": {
+      "DefaultConnection": "Host=localhost;Port=5432;Database=autoservice_db;Username=postgres;Password=1"
+    }
 }
