--- a/Autoservice156MAUI/appsettings.json
+++ b/Autoservice156MAUI/appsettings.json
@@ -7,8 +7,8 @@
   "AuthSettings": {
     "TokenStorageKey": "autoservice_auth_token",
     "UserStorageKey": "autoservice_user_data"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost;Persist Security Info=False;User ID=sa;Password=123;Pooling=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;"
   }
-    "ConnectionStrings": {
-      "DefaultConnection": "Host=localhost;Port=5432;Database=autoservice_db;Username=postgres;Password=1"
-    }
 }
